# testing-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: enforce-uv.mjs
_bmad/: config.toml  config.user.toml
_bmad/bmb/: config.yaml
docs/: architecture.md  coverage-spike-findings.md  patterns.md  prd.md  project-context.md  scaffold-spec.md  story-template.md  usage.md
test/: agent-workflow.test.ts  cli-daemon.test.ts  cli-link.test.ts  cli-main.test.ts  cli-mcp-bridge.test.ts  cli-mcp-config.test.ts  cli-register.test.ts  cli-ui.test.ts  combined-coverage.test.ts  coverage-baseline.test.ts  coverage-build.test.ts  coverage-map.test.ts  coverage-unmeasurable.test.ts  daemon.test.ts  epic-8-e2e-smoke.test.ts  failure-details.test.ts  git-selection.test.ts  history.test.ts  ipc-validation.test.ts  isolation.test.ts  mcp-bridge-resilience.test.ts  mcp-http.test.ts  mcp-registry.test.ts  mcp-run-tests-async.test.ts  mcp-run-tests.test.ts  mcp-server.test.ts  orchestrator-async-run.test.ts  orchestrator-concurrency.test.ts  orchestrator-history.test.ts  orchestrator-live-run.test.ts  orchestrator-selection-reason.test.ts  orchestrator-stall-watchdog.test.ts  orchestrator-timeout.test.ts  plan-commit.test.ts  project-registry.test.ts  registry-migration.test.ts  registry-rehydration.test.ts  registry-validation.test.ts  selection-integration.test.ts  selection.test.ts  (+13 more)
(+121 files in other folders)
