[project]
name = "test-server-mcp"
version = "0.1.0"
description = "MCP server for running tests with intelligent incremental execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_server_mcp"]
